[package]
name = "clone-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
thiserror = "1"
clap = "3"
exitcode = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnetwork = "0.18"

libc = "0.2.117"
nix = "0.23.1"

close_fds = "0.3.2"
